Boilerplate Title page and predefined values

--- a/header.tex
+++ b/header.tex
@@ -1,4 +1,4 @@
-\documentclass{scrartcl}
+\documentclass{scrreprt}
 
 %% Encoding & Internationalization
 % Source files must be utf-8
@@ -24,5 +24,7 @@
 
 
 % User variables
-
+\providecommand{\myauthor}{Define \texttt{author:} in index.mmd}
+\providecommand{\mytitle}{Define \texttt{title:} in index.mmd}
+\author{\myauthor}
 \title{\mytitle}
