Add more field to front page title

--- a/begin.tex
+++ b/begin.tex
@@ -1,2 +1,15 @@
 \begin{document}
+
+
+\subject{Master Thesis}
+\title{\mytitle}
+%\subtitle{\mysubtitle}
+\author{\myauthor}
+%\date{date}
+\publishers{
+University of Freiburg\\
+Faculity of Engineering\\
+Computer Science
+}
+\lowertitleback{test back}
 \maketitle
