--- a/header.tex
+++ b/header.tex
@@ -26,5 +26,5 @@
 % User variables
 \providecommand{\myauthor}{Define \texttt{author:} in index.mmd}
 \providecommand{\mytitle}{Define \texttt{title:} in index.mmd}
-\author{\myauthor}
-\title{\mytitle}
+\providecommand{\mysubtitle}{Define \texttt{mysubtitle:} in index.mmd}
+
