Add Abstract and Dedication

--- a/header.tex
+++ b/header.tex
@@ -1,4 +1,4 @@
-\documentclass{scrreprt}
+\documentclass[twoside]{scrreprt}
 
 %% Encoding & Internationalization
 % Source files must be utf-8
@@ -26,5 +26,4 @@
 % User variables
 \providecommand{\myauthor}{Define \texttt{author:} in index.mmd}
 \providecommand{\mytitle}{Define \texttt{title:} in index.mmd}
-\providecommand{\mysubtitle}{Define \texttt{mysubtitle:} in index.mmd}
 
