--- a/begin.tex
+++ b/begin.tex
@@ -1,5 +1,5 @@
 \begin{document}
-
+\selectlanguage{english}
 
 \subject{Master Thesis}
 \title{\mytitle}
@@ -11,5 +11,32 @@ University of Freiburg\\
 Faculity of Engineering\\
 Computer Science
 }
-\lowertitleback{test back}
+\lowertitleback{
+\begin{description}
+   \item[Bearbeitungszeitraum] 29.02.-31.07.\\
+   \item[Betreuer] Alfred J. Kwack\\
+   \item[Gutachter] Prof. Düsentrieb
+\end{description}
+}
+\dedication{To my dearest gummybear}
 \maketitle
+\begin{abstract}
+\addsec{Abstract}
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+
+\addsec{Zusammenfassung}
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+\end{abstract}
+
+\tableofcontents
