--- a/begin.tex
+++ b/begin.tex
@@ -11,6 +11,10 @@ University of Freiburg\\
 Faculity of Engineering\\
 Computer Science
 }
+\uppertitleback{
+Hiermit erkläre ich, dass ich diese Abschlussarbeit selbständig verfasst habe, keine anderen als die angegebenen Quellen/Hilfsmittel verwendet habe und alle Stellen, die wörtlich oder sinngemäß aus veröffentlichten Schriften entnommen wurden, als solche kenntlich gemacht habe. 
+Darüber hinaus erkläre ich, dass diese Abschlussarbeit nicht, auch nicht auszugsweise, bereits für eine andere Prüfung angefertigt wurde.
+}
 \lowertitleback{
 \begin{description}
    \item[Bearbeitungszeitraum] 29.02.-31.07.\\
