Fix error in including

--- a/tex/begin.tex
+++ b/tex/begin.tex
@@ -12,7 +12,7 @@ Faculity of Engineering\\
 Computer Science
 }
 \uppertitleback{
-\input{declartion_de}
+\input{mmd/declaration_de}
 }
 \lowertitleback{
 \begin{description}
