--- a/tex/header.tex
+++ b/tex/header.tex
@@ -6,7 +6,9 @@
 % Proper copy paste from final pdf
 \usepackage[T1]{fontenc}
 
-\usepackage[english, ngerman]{babel}
+% Internationalization
+\usepackage[\babellanguage]{babel}
+\usepackage{iflang}
 
 % Math mode
 \usepackage{amsfonts, amsmath, amssymb}
@@ -26,4 +28,5 @@
 % User variables
 \providecommand{\myauthor}{Define \texttt{author:} in index.mmd}
 \providecommand{\mytitle}{Define \texttt{title:} in index.mmd}
+
 
