Define meta information

--- a/tex/begin.tex
+++ b/tex/begin.tex
@@ -2,7 +2,7 @@
 
 \subject{\IfLanguageName{ngerman}{Masterarbeit}{Master Thesis}}
 \title{\mytitle}
-%\subtitle{\mysubtitle}
+\subtitle{\mysubtitle}
 \author{\myauthor}
 %\date{date}
 \publishers{
@@ -15,9 +15,9 @@
 }
 \lowertitleback{
 \begin{description}
-   \item[\IfLanguageName{ngerman}{Bearbeitungszeitraum}{Work period}] 29.02.-31.07.\\
-   \item[\IfLanguageName{ngerman}{Betreuer}{Advisor}] Alfred J. Kwack\\
-   \item[\IfLanguageName{ngerman}{Prüfer}{Examiner}] Prof. Düsentrieb
+   \item[\IfLanguageName{ngerman}{Bearbeitungszeitraum}{Work period}] \period\\
+   \item[\IfLanguageName{ngerman}{Betreuer}{Advisor}] \advisor\\
+   \item[\IfLanguageName{ngerman}{Prüfer}{Examiner}] \examiner
 \end{description}
 }
 \dedication{To my dearest gummybear}
