--- a/tex/header.tex
+++ b/tex/header.tex
@@ -28,5 +28,5 @@
 % User variables
 \providecommand{\myauthor}{Define \texttt{author:} in index.mmd}
 \providecommand{\mytitle}{Define \texttt{title:} in index.mmd}
-
+\providecommand{\mysubtitle}{}
 
