Support for multimarkdown tables

--- a/tex/header.tex
+++ b/tex/header.tex
@@ -19,6 +19,9 @@
 % Links
 \usepackage{hyperref}
 
+% Tables
+\usepackage{tabulary}
+
 %% Packages that aren't used by Multimarkdown
 % Plots and graphs
 % \usepackage{pdg, tikz}
